--- a/css/sass/_mixins.sass
+++ b/css/sass/_mixins.sass
@@ -80,12 +80,13 @@
     border-bottom: 2px solid $dark
 
 
+// Animations
+
 @mixin animation($string)
   -webkit-animation: $string
   -moz-animation:    $string
   -o-animation:      $string
   animation:         $string
-
 
 @mixin keyframes($name)
   @-webkit-keyframes $name
