--- a/css/sass/_base.sass
+++ b/css/sass/_base.sass
@@ -91,17 +91,23 @@ em
 // Content Types
 
 section
+  border: 1px solid #ccc
   @include clearfix
   background: #fff
   width: 100%
   z-index: 3
 
-  &.background-image
+  .background-image
+    position: absolute
+    width: 100%
+    height: 100%
+    top: 0
+    left: 0
     // incompatible with 3d transform tricks
-    background-attachment: fixed
-    background-position: center
+    // background-attachment: fixed
+    background-position: 50% 0%
     // has severe performance issues:
-    background-size: cover
+    // background-size: cover
     padding: 3em 6em
 
   &.chapter
@@ -114,7 +120,7 @@ section
   &.chapter_title
     text-align: center
     text-transform: uppercase
-    @extend .background-image
+    // @extend .background-image
     padding: 12em 0
 
     p
