--- a/css/sass/_chapter1.sass
+++ b/css/sass/_chapter1.sass
@@ -7,7 +7,7 @@
       @include text-shadow($dark 0 0 25px)
       margin-top: 4em
 
-  .company_photo
+  .story_header_wrapper
     z-index: 1
     @include transition(opacity .3s)
 
