--- a/css/sass/style.sass
+++ b/css/sass/style.sass
@@ -19,8 +19,15 @@ $caslon-bold: 'Adobe Caslon W01 Bd'
 $caslon-italic: 'Adobe Caslon W01 It'
 $caslon-bold-italic: 'Adobe Caslon W01 Bd It'
 
+// $caslon: serif
+// $caslon-bold: serif
+// $caslon-italic: serif
+// $caslon-bold-italic: serif
+
 $proxima-bold: 'Proxima N W01 Bold'
 $proxima-semibold: 'Proxima N W01 Smbd'
+
+
 
 $font-chapter: $bodoni, 'Times New Roman', Times, serif
 $font-heading: $proxima-bold, 'Century Gothic', Helvetica, Arial, sans-serif
