--- a/css/style.css
+++ b/css/style.css
@@ -67,24 +67,24 @@ header.site_header nav li:hover:after, header.site_header nav li.current_chapter
   box-sizing: border-box;
   position: relative; }
 
-/* line 7, sass/_base.sass */
+/* line 8, sass/_base.sass */
 a {
   color: #548e85; }
-  /* line 10, sass/_base.sass */
+  /* line 11, sass/_base.sass */
   a:hover {
     color: #383838; }
 
-/* line 13, sass/_base.sass */
+/* line 14, sass/_base.sass */
 input {
   margin: 0; }
 
-/* line 16, sass/_base.sass */
+/* line 17, sass/_base.sass */
 html,
 body {
   width: 100%;
   height: 100%; }
 
-/* line 21, sass/_base.sass */
+/* line 22, sass/_base.sass */
 html {
   background: white;
   color: #383838;
@@ -93,7 +93,7 @@ html {
   line-height: 24px;
   -webkit-font-smoothing: antialiased; }
 
-/* line 29, sass/_base.sass */
+/* line 30, sass/_base.sass */
 h1,
 h2,
 h3,
@@ -103,68 +103,68 @@ h6 {
   font-weight: normal;
   line-height: 1; }
 
-/* line 38, sass/_base.sass */
+/* line 39, sass/_base.sass */
 h1,
 h2 {
   font-family: "Bodoni W01 Poster";
   text-align: center;
   text-transform: uppercase; }
 
-/* line 44, sass/_base.sass */
+/* line 45, sass/_base.sass */
 h2 {
   font-size: 30px;
   margin: 24px 0;
   padding: 24px 0 0; }
 
-/* line 49, sass/_base.sass */
+/* line 50, sass/_base.sass */
 h3 {
   font-size: 18px;
   margin: 30px 0 12px; }
 
-/* line 53, sass/_base.sass */
+/* line 54, sass/_base.sass */
 p {
   margin: 24px 0; }
 
-/* line 56, sass/_base.sass */
+/* line 57, sass/_base.sass */
 strong {
   font-weight: bold; }
 
-/* line 59, sass/_base.sass */
+/* line 60, sass/_base.sass */
 em {
   font-style: italic; }
 
-/* line 65, sass/_base.sass */
+/* line 66, sass/_base.sass */
 .contents {
   margin: 0 auto;
   max-width: 800px;
   padding: 48px 0; }
 
-/* line 70, sass/_base.sass */
+/* line 71, sass/_base.sass */
 .fixed, header.site_header,
 header.story_header {
   position: fixed;
   left: 0;
   top: 0; }
 
-/* line 75, sass/_base.sass */
+/* line 76, sass/_base.sass */
 .bleed {
   width: 100%;
   height: 100%; }
-  /* line 79, sass/_base.sass */
+  /* line 80, sass/_base.sass */
   .bleed img {
     width: 100%; }
 
-/* line 82, sass/_base.sass */
+/* line 83, sass/_base.sass */
 .half {
   float: left;
   margin-right: 2%;
   width: 49%; }
 
-/* line 87, sass/_base.sass */
+/* line 88, sass/_base.sass */
 .half + .half {
   width: 49%; }
 
-/* line 93, sass/_base.sass */
+/* line 94, sass/_base.sass */
 section {
   border: 1px solid #cccccc;
   overflow: hidden;
@@ -172,7 +172,7 @@ section {
   background: white;
   width: 100%;
   z-index: 3; }
-  /* line 100, sass/_base.sass */
+  /* line 101, sass/_base.sass */
   section .background-image {
     position: absolute;
     width: 100%;
@@ -180,20 +180,22 @@ section {
     top: 0;
     left: 0;
     background-position: 50% 0%;
-    padding: 3em 6em; }
-  /* line 113, sass/_base.sass */
+    padding: 3em 6em;
+    -webkit-backface-visibility: hidden;
+    -webkit-perspective: 1000; }
+  /* line 117, sass/_base.sass */
   section.chapter {
     text-align: center; }
-    /* line 116, sass/_base.sass */
+    /* line 120, sass/_base.sass */
     section.chapter p {
       font-family: "Bodoni MT W01", "Times New Roman", Times, serif;
       text-transform: uppercase; }
-  /* line 120, sass/_base.sass */
+  /* line 124, sass/_base.sass */
   section.chapter_title {
     text-align: center;
     text-transform: uppercase;
     padding: 12em 0; }
-    /* line 126, sass/_base.sass */
+    /* line 130, sass/_base.sass */
     section.chapter_title p {
       border-bottom: 2px solid #383838;
       display: inline-block;
@@ -201,48 +203,48 @@ section {
       letter-spacing: 1px;
       margin: 0 auto;
       padding: 0 1em 0.25em 1em; }
-    /* line 134, sass/_base.sass */
+    /* line 138, sass/_base.sass */
     section.chapter_title h2 {
       font-size: 44px;
       margin: 0; }
-    /* line 139, sass/_base.sass */
+    /* line 143, sass/_base.sass */
     section.chapter_title.on_dark_background p, .chapter-1-rethinking-retirement article section.chapter_title p {
       border-bottom: 2px solid rgba(255, 255, 255, 0.6); }
-    /* line 142, sass/_base.sass */
+    /* line 146, sass/_base.sass */
     section.chapter_title.on_dark_background p, .chapter-1-rethinking-retirement article section.chapter_title p,
     section.chapter_title.on_dark_background h2,
     .chapter-1-rethinking-retirement article section.chapter_title h2 {
       color: white;
       text-shadow: #383838 0 0 25px; }
-  /* line 148, sass/_base.sass */
+  /* line 152, sass/_base.sass */
   section.copy p {
     font-size: 18px;
     line-height: 1.3; }
-  /* line 153, sass/_base.sass */
+  /* line 157, sass/_base.sass */
   section.quotation .contents {
     overflow: hidden;
     *zoom: 1;
     background-repeat: no-repeat;
     padding: 6em 0; }
-  /* line 158, sass/_base.sass */
+  /* line 162, sass/_base.sass */
   section.quotation blockquote {
     background: #548e85;
     color: white;
     display: block;
     padding: 2em;
     width: 50%; }
-    /* line 165, sass/_base.sass */
+    /* line 169, sass/_base.sass */
     section.quotation blockquote p {
       font-size: 19.2px;
       margin-top: 0; }
-  /* line 169, sass/_base.sass */
+  /* line 173, sass/_base.sass */
   section.quotation cite {
     font-size: 14.4px; }
-    /* line 172, sass/_base.sass */
+    /* line 176, sass/_base.sass */
     section.quotation cite strong {
       display: block;
       font-size: 16px; }
-  /* line 176, sass/_base.sass */
+  /* line 180, sass/_base.sass */
   section.quotation.left, .chapter-1-rethinking-retirement article section.working_about_the_right_amount {
     float: left; }
     /* line 44, sass/_mixins.sass */
@@ -256,10 +258,10 @@ section {
       border-bottom: 25px solid transparent;
       border-left: 25px solid #548e85;
       margin-right: -25px; }
-    /* line 182, sass/_base.sass */
+    /* line 186, sass/_base.sass */
     section.quotation.left .contents, .chapter-1-rethinking-retirement article section.working_about_the_right_amount .contents {
       background-position: 90% center; }
-  /* line 185, sass/_base.sass */
+  /* line 189, sass/_base.sass */
   section.quotation.right {
     float: right; }
     /* line 32, sass/_mixins.sass */
@@ -273,15 +275,15 @@ section {
       border-bottom: 25px solid transparent;
       border-right: 25px solid #548e85;
       margin-left: -24px; }
-    /* line 191, sass/_base.sass */
+    /* line 195, sass/_base.sass */
     section.quotation.right .contents {
       background-position: left; }
-  /* line 195, sass/_base.sass */
+  /* line 199, sass/_base.sass */
   section.quotation.paul .contents {
     background-image: url('../img/1/paul.jpg?1369489914');
     background-repeat: no-repeat;
     background-position: 0 8em; }
-  /* line 200, sass/_base.sass */
+  /* line 204, sass/_base.sass */
   section.quotation.paul blockquote {
     float: right;
     width: 75%; }
@@ -297,7 +299,7 @@ section {
       border-right: 25px solid #548e85;
       margin-left: -24px; }
 
-/* line 205, sass/_base.sass */
+/* line 209, sass/_base.sass */
 .major, .major-alt, .chapter-1-rethinking-retirement article .intro p.second, .chapter-1-rethinking-retirement article .intro p.first,
 .chapter-1-rethinking-retirement article .intro p.third, .chapter-1-rethinking-retirement article .percentage_of_workers p, .chapter-1-rethinking-retirement article .half_of_american_households p, .chapter-1-rethinking-retirement article .one_in_four_workers .contents div p.first {
   font-family: "Proxima N W01 Bold", "Century Gothic", Helvetica, Arial, sans-serif;
@@ -306,15 +308,15 @@ section {
   text-transform: uppercase;
   line-height: 1.3; }
 
-/* line 212, sass/_base.sass */
+/* line 216, sass/_base.sass */
 .major-alt, .chapter-1-rethinking-retirement article .intro p.second {
   font-size: 20px; }
 
-/* line 217, sass/_base.sass */
+/* line 221, sass/_base.sass */
 .half-width p, .chapter-1-rethinking-retirement article .outro p {
   width: 50%; }
 
-/* line 220, sass/_base.sass */
+/* line 224, sass/_base.sass */
 .bordered, .chapter-1-rethinking-retirement article .intro p.second, .chapter-1-rethinking-retirement article .percentage_of_workers p, .chapter-1-rethinking-retirement article .increase_of_workers p span {
   border-top: 2px solid #383838;
   border-bottom: 2px solid #383838;
@@ -322,7 +324,7 @@ section {
   padding: 0.5em 0 0.4em 0;
   width: 75%; }
 
-/* line 228, sass/_base.sass */
+/* line 232, sass/_base.sass */
 .hr-top .contents:before {
   content: "";
   display: block;
