--- a/css/style.css
+++ b/css/style.css
@@ -165,24 +165,24 @@ header.story_header {
   width: 49%; }
 
 /* line 94, sass/_base.sass */
+.background-image {
+  position: absolute;
+  width: 100%;
+  height: 200%;
+  top: 0;
+  left: 0;
+  background-position: 50% 0%;
+  background-repeat: no-repeat;
+  -webkit-backface-visibility: hidden;
+  -webkit-perspective: 1000; }
+
+/* line 111, sass/_base.sass */
 section {
-  border: 1px solid #cccccc;
   overflow: hidden;
   *zoom: 1;
   background: white;
   width: 100%;
   z-index: 3; }
-  /* line 101, sass/_base.sass */
-  section .background-image {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    top: 0;
-    left: 0;
-    background-position: 50% 0%;
-    padding: 3em 6em;
-    -webkit-backface-visibility: hidden;
-    -webkit-perspective: 1000; }
   /* line 117, sass/_base.sass */
   section.chapter {
     text-align: center; }
@@ -604,23 +604,26 @@ footer {
 /* line 10, sass/_chapter1.sass */
 .chapter-1-rethinking-retirement article .story_header_wrapper {
   z-index: 1;
-  -webkit-transition: opacity 0.3s;
-  -moz-transition: opacity 0.3s;
-  -o-transition: opacity 0.3s;
-  transition: opacity 0.3s; }
+  -webkit-transition: opacity 1s;
+  -moz-transition: opacity 1s;
+  -o-transition: opacity 1s;
+  transition: opacity 1s; }
 /* line 14, sass/_chapter1.sass */
+.chapter-1-rethinking-retirement article .company_photo .background-image {
+  background-image: url('../img/1/company_photo.jpg?1369273158');
+  background-size: 100%; }
+/* line 18, sass/_chapter1.sass */
 .chapter-1-rethinking-retirement article .intro {
   margin-top: 80%;
   text-align: center; }
-  /* line 26, sass/_chapter1.sass */
+  /* line 30, sass/_chapter1.sass */
   .chapter-1-rethinking-retirement article .intro strong {
     color: #548e85;
     font-weight: normal; }
-/* line 33, sass/_chapter1.sass */
+/* line 37, sass/_chapter1.sass */
 .chapter-1-rethinking-retirement article .chapter_title .background-image {
-  background-image: url('../img/1/path.jpg?1369437709');
-  background-position: center; }
-/* line 42, sass/_chapter1.sass */
+  background-image: url('../img/1/path.jpg?1369437709'); }
+/* line 46, sass/_chapter1.sass */
 .chapter-1-rethinking-retirement article .pie_slice {
   -webkit-transform-origin: 50px 50px;
   -moz-transform-origin: 50px 50px;
@@ -636,29 +639,29 @@ footer {
   -moz-transition: -moz-transform 2s;
   -o-transition: -o-transform 2s;
   transition: transform 2s; }
-/* line 47, sass/_chapter1.sass */
+/* line 51, sass/_chapter1.sass */
 .chapter-1-rethinking-retirement article .percent_50, .chapter-1-rethinking-retirement article .percent_92 {
   width: 100px;
   height: 100px;
   margin: 0 auto; }
-  /* line 52, sass/_chapter1.sass */
+  /* line 56, sass/_chapter1.sass */
   .chapter-1-rethinking-retirement article .percent_50 img, .chapter-1-rethinking-retirement article .percent_92 img {
     display: none; }
-/* line 56, sass/_chapter1.sass */
+/* line 60, sass/_chapter1.sass */
 .chapter-1-rethinking-retirement article .active .percent_92 .pie_slice {
   -webkit-transform: rotate(-20deg);
   -moz-transform: rotate(-20deg);
   -ms-transform: rotate(-20deg);
   -o-transform: rotate(-20deg);
   transform: rotate(-20deg); }
-/* line 59, sass/_chapter1.sass */
+/* line 63, sass/_chapter1.sass */
 .chapter-1-rethinking-retirement article .active .percent_50 .pie_slice {
   -webkit-transform: rotate(0deg);
   -moz-transform: rotate(0deg);
   -ms-transform: rotate(0deg);
   -o-transform: rotate(0deg);
   transform: rotate(0deg); }
-/* line 63, sass/_chapter1.sass */
+/* line 67, sass/_chapter1.sass */
 .chapter-1-rethinking-retirement article .expectation_chart {
   background: url('../img/1/expectation_chart.svg?1369441558') left top no-repeat;
   background-size: contain;
@@ -666,7 +669,7 @@ footer {
   width: 870px;
   height: 280px;
   position: relative; }
-  /* line 71, sass/_chapter1.sass */
+  /* line 75, sass/_chapter1.sass */
   .chapter-1-rethinking-retirement article .expectation_chart .data_point {
     background: rgba(0, 0, 0, 0.8);
     border-radius: 2px;
@@ -689,16 +692,16 @@ footer {
       border-right: 4px solid transparent;
       border-top: 4px solid rgba(0, 0, 0, 0.8);
       margin-bottom: -4px; }
-    /* line 84, sass/_chapter1.sass */
+    /* line 88, sass/_chapter1.sass */
     .chapter-1-rethinking-retirement article .expectation_chart .data_point strong {
       display: block;
       font-family: "BodoniW01-PosterItalic";
       font-size: 24px; }
-    /* line 89, sass/_chapter1.sass */
+    /* line 93, sass/_chapter1.sass */
     .chapter-1-rethinking-retirement article .expectation_chart .data_point.active {
       margin-top: 0;
       opacity: 1; }
-    /* line 93, sass/_chapter1.sass */
+    /* line 97, sass/_chapter1.sass */
     .chapter-1-rethinking-retirement article .expectation_chart .data_point#expectation_chart-data_point-1 {
       left: 157px;
       top: 80px;
@@ -706,7 +709,7 @@ footer {
       -moz-transition-delay: 0.2s;
       -o-transition-delay: 0.2s;
       transition-delay: 0.2s; }
-    /* line 98, sass/_chapter1.sass */
+    /* line 102, sass/_chapter1.sass */
     .chapter-1-rethinking-retirement article .expectation_chart .data_point#expectation_chart-data_point-2 {
       left: 319px;
       top: 46px;
@@ -714,7 +717,7 @@ footer {
       -moz-transition-delay: 0.4s;
       -o-transition-delay: 0.4s;
       transition-delay: 0.4s; }
-    /* line 103, sass/_chapter1.sass */
+    /* line 107, sass/_chapter1.sass */
     .chapter-1-rethinking-retirement article .expectation_chart .data_point#expectation_chart-data_point-3 {
       left: 475px;
       top: 38px;
@@ -722,7 +725,7 @@ footer {
       -moz-transition-delay: 0.6s;
       -o-transition-delay: 0.6s;
       transition-delay: 0.6s; }
-    /* line 108, sass/_chapter1.sass */
+    /* line 112, sass/_chapter1.sass */
     .chapter-1-rethinking-retirement article .expectation_chart .data_point#expectation_chart-data_point-4 {
       left: 642px;
       top: 2px;
@@ -730,7 +733,7 @@ footer {
       -moz-transition-delay: 0.8s;
       -o-transition-delay: 0.8s;
       transition-delay: 0.8s; }
-    /* line 113, sass/_chapter1.sass */
+    /* line 117, sass/_chapter1.sass */
     .chapter-1-rethinking-retirement article .expectation_chart .data_point#expectation_chart-data_point-5 {
       background: #548e85;
       left: 804px;
@@ -747,11 +750,10 @@ footer {
         border-right: 4px solid transparent;
         border-top: 4px solid #548e85;
         margin-bottom: -4px; }
-/* line 122, sass/_chapter1.sass */
-.chapter-1-rethinking-retirement article .increase_of_workers .background-image {
-  background-image: url('../img/1/grumpy_man.jpg?1369444550');
-  background-position: 70% center; }
 /* line 126, sass/_chapter1.sass */
+.chapter-1-rethinking-retirement article .increase_of_workers .background-image {
+  background-image: url('../img/1/grumpy_man.jpg?1369444550'); }
+/* line 130, sass/_chapter1.sass */
 .chapter-1-rethinking-retirement article .increase_of_workers p {
   clear: left;
   background: white;
@@ -770,23 +772,23 @@ footer {
     margin: 0.75em auto 0;
     width: 50px;
     border-bottom: 2px solid #383838; }
-  /* line 129, sass/_chapter1.sass */
+  /* line 133, sass/_chapter1.sass */
   .chapter-1-rethinking-retirement article .increase_of_workers p span {
     display: block;
     line-height: 1;
     margin: 0.25em 0 0.5em;
     padding: 0.75em 0 0.75em;
     width: 100%; }
-    /* line 137, sass/_chapter1.sass */
+    /* line 141, sass/_chapter1.sass */
     .chapter-1-rethinking-retirement article .increase_of_workers p span strong {
       display: inline-block;
       font-family: "BodoniW01-PosterItalic";
       font-size: 60px;
       margin: 0 0.1em; }
-/* line 144, sass/_chapter1.sass */
+/* line 148, sass/_chapter1.sass */
 .chapter-1-rethinking-retirement article .half_of_american_households .background-image {
   background-image: url('../img/1/jars.jpg?1369489914'); }
-/* line 148, sass/_chapter1.sass */
+/* line 152, sass/_chapter1.sass */
 .chapter-1-rethinking-retirement article .half_of_american_households p {
   clear: left;
   background: white;
@@ -805,10 +807,10 @@ footer {
     margin: 0.75em auto 0;
     width: 50px;
     border-bottom: 2px solid #383838; }
-/* line 153, sass/_chapter1.sass */
+/* line 157, sass/_chapter1.sass */
 .chapter-1-rethinking-retirement article .one_in_four_workers .background-image {
   background-image: url('../img/1/diner.jpg?1369445278'); }
-/* line 157, sass/_chapter1.sass */
+/* line 161, sass/_chapter1.sass */
 .chapter-1-rethinking-retirement article .one_in_four_workers .contents div {
   clear: left;
   background: white;
@@ -827,10 +829,10 @@ footer {
     margin: 0.75em auto 0;
     width: 50px;
     border-bottom: 2px solid #383838; }
-/* line 166, sass/_chapter1.sass */
+/* line 170, sass/_chapter1.sass */
 .chapter-1-rethinking-retirement article .working_about_the_right_amount .contents {
   background-image: url('../img/1/quoter.jpg?1369489914'); }
-/* line 175, sass/_chapter1.sass */
+/* line 179, sass/_chapter1.sass */
 .chapter-1-rethinking-retirement article .outro .second {
   font-family: "Adobe Caslon W01 Bd";
   font-size: 20.8px; }
