Better position the ch1 title.

--- a/css/sass/_chapter1.sass
+++ b/css/sass/_chapter1.sass
@@ -33,6 +33,7 @@
 
   .chapter_title
     @extend .on_dark_background
+    padding: 24em 0 2em 0
 
     .background-image
       background-image: image-url('1/path.jpg')
