Illustrations and big photo backgrounds should be at least quite tall.

--- a/css/sass/_base.sass
+++ b/css/sass/_base.sass
@@ -148,6 +148,9 @@ section
         color: #fff
         @include text-shadow($dark 0 0 25px)
 
+  &.spread
+    min-height: 800px
+
   &.copy
     p
       font-size: 18px
