--- a/css/style.css
+++ b/css/style.css
@@ -216,35 +216,38 @@ section {
     .chapter-1-rethinking-retirement article section.chapter_title h2 {
       color: white;
       text-shadow: #383838 0 0 25px; }
-  /* line 152, sass/_base.sass */
+  /* line 151, sass/_base.sass */
+  section.spread, .chapter-1-rethinking-retirement article section.increase_of_workers, .chapter-1-rethinking-retirement article section.one_in_four_workers, .chapter-1-rethinking-retirement article section.half_of_american_households {
+    min-height: 800px; }
+  /* line 155, sass/_base.sass */
   section.copy p {
     font-size: 18px;
     line-height: 1.3; }
-  /* line 157, sass/_base.sass */
+  /* line 160, sass/_base.sass */
   section.quotation .contents {
     overflow: hidden;
     *zoom: 1;
     background-repeat: no-repeat;
     padding: 6em 0; }
-  /* line 162, sass/_base.sass */
+  /* line 165, sass/_base.sass */
   section.quotation blockquote {
     background: #548e85;
     color: white;
     display: block;
     padding: 2em;
     width: 50%; }
-    /* line 169, sass/_base.sass */
+    /* line 172, sass/_base.sass */
     section.quotation blockquote p {
       font-size: 19.2px;
       margin-top: 0; }
-  /* line 173, sass/_base.sass */
+  /* line 176, sass/_base.sass */
   section.quotation cite {
     font-size: 14.4px; }
-    /* line 176, sass/_base.sass */
+    /* line 179, sass/_base.sass */
     section.quotation cite strong {
       display: block;
       font-size: 16px; }
-  /* line 180, sass/_base.sass */
+  /* line 183, sass/_base.sass */
   section.quotation.left, .chapter-1-rethinking-retirement article section.working_about_the_right_amount {
     float: left; }
     /* line 44, sass/_mixins.sass */
@@ -258,10 +261,10 @@ section {
       border-bottom: 25px solid transparent;
       border-left: 25px solid #548e85;
       margin-right: -25px; }
-    /* line 186, sass/_base.sass */
+    /* line 189, sass/_base.sass */
     section.quotation.left .contents, .chapter-1-rethinking-retirement article section.working_about_the_right_amount .contents {
       background-position: 90% center; }
-  /* line 189, sass/_base.sass */
+  /* line 192, sass/_base.sass */
   section.quotation.right {
     float: right; }
     /* line 32, sass/_mixins.sass */
@@ -275,15 +278,15 @@ section {
       border-bottom: 25px solid transparent;
       border-right: 25px solid #548e85;
       margin-left: -24px; }
-    /* line 195, sass/_base.sass */
+    /* line 198, sass/_base.sass */
     section.quotation.right .contents {
       background-position: left; }
-  /* line 199, sass/_base.sass */
+  /* line 202, sass/_base.sass */
   section.quotation.paul .contents {
     background-image: url('../img/1/paul.jpg?1369452927');
     background-repeat: no-repeat;
     background-position: 0 8em; }
-  /* line 204, sass/_base.sass */
+  /* line 207, sass/_base.sass */
   section.quotation.paul blockquote {
     float: right;
     width: 75%; }
@@ -299,24 +302,24 @@ section {
       border-right: 25px solid #548e85;
       margin-left: -24px; }
 
-/* line 209, sass/_base.sass */
+/* line 212, sass/_base.sass */
 .major, .major-alt, .chapter-1-rethinking-retirement article .intro p.second, .chapter-1-rethinking-retirement article .intro p.first,
-.chapter-1-rethinking-retirement article .intro p.third, .chapter-1-rethinking-retirement article .percentage_of_workers p, .chapter-1-rethinking-retirement article .half_of_american_households p, .chapter-1-rethinking-retirement article .one_in_four_workers .contents div p.first {
+.chapter-1-rethinking-retirement article .intro p.third, .chapter-1-rethinking-retirement article .percentage_of_workers p, .chapter-1-rethinking-retirement article .one_in_four_workers .contents div p.first, .chapter-1-rethinking-retirement article .half_of_american_households p {
   font-family: "Proxima N W01 Bold", "Century Gothic", Helvetica, Arial, sans-serif;
   font-size: 30px;
   text-align: center;
   text-transform: uppercase;
   line-height: 1.3; }
 
-/* line 216, sass/_base.sass */
+/* line 219, sass/_base.sass */
 .major-alt, .chapter-1-rethinking-retirement article .intro p.second {
   font-size: 20px; }
 
-/* line 221, sass/_base.sass */
+/* line 224, sass/_base.sass */
 .half-width p, .chapter-1-rethinking-retirement article .outro p {
   width: 50%; }
 
-/* line 224, sass/_base.sass */
+/* line 227, sass/_base.sass */
 .bordered, .chapter-1-rethinking-retirement article .intro p.second, .chapter-1-rethinking-retirement article .percentage_of_workers p, .chapter-1-rethinking-retirement article .increase_of_workers p span {
   border-top: 2px solid #383838;
   border-bottom: 2px solid #383838;
@@ -324,7 +327,7 @@ section {
   padding: 0.5em 0 0.4em 0;
   width: 75%; }
 
-/* line 232, sass/_base.sass */
+/* line 235, sass/_base.sass */
 .hr-top .contents:before {
   content: "";
   display: block;
@@ -752,10 +755,10 @@ footer {
         border-right: 4px solid transparent;
         border-top: 4px solid #548e85;
         margin-bottom: -4px; }
-/* line 127, sass/_chapter1.sass */
+/* line 128, sass/_chapter1.sass */
 .chapter-1-rethinking-retirement article .increase_of_workers .background-image {
   background-image: url('../img/1/grumpy_man.jpg?1369442609'); }
-/* line 131, sass/_chapter1.sass */
+/* line 132, sass/_chapter1.sass */
 .chapter-1-rethinking-retirement article .increase_of_workers p {
   clear: left;
   background: white;
@@ -768,49 +771,29 @@ footer {
   /* line 75, sass/_mixins.sass */
   .chapter-1-rethinking-retirement article .increase_of_workers p .major:after, .chapter-1-rethinking-retirement article .increase_of_workers p .major-alt:after, .chapter-1-rethinking-retirement article .increase_of_workers p .intro p.second:after, .chapter-1-rethinking-retirement article .intro .increase_of_workers p p.second:after, .chapter-1-rethinking-retirement article .increase_of_workers p .intro p.first:after, .chapter-1-rethinking-retirement article .intro .increase_of_workers p p.first:after,
   .chapter-1-rethinking-retirement article .increase_of_workers p .intro p.third:after,
-  .chapter-1-rethinking-retirement article .intro .increase_of_workers p p.third:after, .chapter-1-rethinking-retirement article .increase_of_workers p .percentage_of_workers p:after, .chapter-1-rethinking-retirement article .percentage_of_workers .increase_of_workers p p:after, .chapter-1-rethinking-retirement article .increase_of_workers p .half_of_american_households p:after, .chapter-1-rethinking-retirement article .half_of_american_households .increase_of_workers p p:after, .chapter-1-rethinking-retirement article .increase_of_workers p .one_in_four_workers .contents div p.first:after, .chapter-1-rethinking-retirement article .one_in_four_workers .contents div .increase_of_workers p p.first:after {
+  .chapter-1-rethinking-retirement article .intro .increase_of_workers p p.third:after, .chapter-1-rethinking-retirement article .increase_of_workers p .percentage_of_workers p:after, .chapter-1-rethinking-retirement article .percentage_of_workers .increase_of_workers p p:after, .chapter-1-rethinking-retirement article .increase_of_workers p .one_in_four_workers .contents div p.first:after, .chapter-1-rethinking-retirement article .one_in_four_workers .contents div .increase_of_workers p p.first:after, .chapter-1-rethinking-retirement article .increase_of_workers p .half_of_american_households p:after, .chapter-1-rethinking-retirement article .half_of_american_households .increase_of_workers p p:after {
     content: "";
     display: block;
     margin: 0.75em auto 0;
     width: 50px;
     border-bottom: 2px solid #383838; }
-  /* line 134, sass/_chapter1.sass */
+  /* line 135, sass/_chapter1.sass */
   .chapter-1-rethinking-retirement article .increase_of_workers p span {
     display: block;
     line-height: 1;
     margin: 0.25em 0 0.5em;
     padding: 0.75em 0 0.75em;
     width: 100%; }
-    /* line 142, sass/_chapter1.sass */
+    /* line 143, sass/_chapter1.sass */
     .chapter-1-rethinking-retirement article .increase_of_workers p span strong {
       display: inline-block;
       font-family: "BodoniW01-PosterItalic";
       font-size: 60px;
       margin: 0 0.1em; }
-/* line 149, sass/_chapter1.sass */
-.chapter-1-rethinking-retirement article .half_of_american_households .background-image {
-  background-image: url('../img/1/jars.jpg?1369445831'); }
-/* line 153, sass/_chapter1.sass */
-.chapter-1-rethinking-retirement article .half_of_american_households p {
-  clear: left;
-  background: white;
-  margin-top: 2em;
-  margin-bottom: 2em;
-  padding: 2em;
-  width: 40%;
-  float: left;
-  text-align: center; }
-  /* line 75, sass/_mixins.sass */
-  .chapter-1-rethinking-retirement article .half_of_american_households p .major:after, .chapter-1-rethinking-retirement article .half_of_american_households p .major-alt:after, .chapter-1-rethinking-retirement article .half_of_american_households p p:after, .chapter-1-rethinking-retirement article .half_of_american_households p .one_in_four_workers .contents div p.first:after, .chapter-1-rethinking-retirement article .one_in_four_workers .contents div .half_of_american_households p p.first:after {
-    content: "";
-    display: block;
-    margin: 0.75em auto 0;
-    width: 50px;
-    border-bottom: 2px solid #383838; }
-/* line 158, sass/_chapter1.sass */
+/* line 152, sass/_chapter1.sass */
 .chapter-1-rethinking-retirement article .one_in_four_workers .background-image {
   background-image: url('../img/1/diner.jpg?1369444335'); }
-/* line 162, sass/_chapter1.sass */
+/* line 155, sass/_chapter1.sass */
 .chapter-1-rethinking-retirement article .one_in_four_workers .contents div {
   clear: left;
   background: white;
@@ -823,16 +806,36 @@ footer {
   /* line 75, sass/_mixins.sass */
   .chapter-1-rethinking-retirement article .one_in_four_workers .contents div .major:after, .chapter-1-rethinking-retirement article .one_in_four_workers .contents div .major-alt:after, .chapter-1-rethinking-retirement article .one_in_four_workers .contents div .intro p.second:after, .chapter-1-rethinking-retirement article .intro .one_in_four_workers .contents div p.second:after,
   .chapter-1-rethinking-retirement article .one_in_four_workers .contents div .intro p.third:after,
-  .chapter-1-rethinking-retirement article .intro .one_in_four_workers .contents div p.third:after, .chapter-1-rethinking-retirement article .one_in_four_workers .contents div .percentage_of_workers p:after, .chapter-1-rethinking-retirement article .percentage_of_workers .one_in_four_workers .contents div p:after, .chapter-1-rethinking-retirement article .one_in_four_workers .contents div .half_of_american_households p:after, .chapter-1-rethinking-retirement article .half_of_american_households .one_in_four_workers .contents div p:after, .chapter-1-rethinking-retirement article .one_in_four_workers .contents div p.first:after {
+  .chapter-1-rethinking-retirement article .intro .one_in_four_workers .contents div p.third:after, .chapter-1-rethinking-retirement article .one_in_four_workers .contents div .percentage_of_workers p:after, .chapter-1-rethinking-retirement article .percentage_of_workers .one_in_four_workers .contents div p:after, .chapter-1-rethinking-retirement article .one_in_four_workers .contents div p.first:after, .chapter-1-rethinking-retirement article .one_in_four_workers .contents div .half_of_american_households p:after, .chapter-1-rethinking-retirement article .half_of_american_households .one_in_four_workers .contents div p:after {
     content: "";
     display: block;
     margin: 0.75em auto 0;
     width: 50px;
     border-bottom: 2px solid #383838; }
-/* line 171, sass/_chapter1.sass */
+/* line 164, sass/_chapter1.sass */
+.chapter-1-rethinking-retirement article .half_of_american_households .background-image {
+  background-image: url('../img/1/jars.jpg?1369445831'); }
+/* line 167, sass/_chapter1.sass */
+.chapter-1-rethinking-retirement article .half_of_american_households p {
+  clear: left;
+  background: white;
+  margin-top: 2em;
+  margin-bottom: 2em;
+  padding: 2em;
+  width: 40%;
+  float: left;
+  text-align: center; }
+  /* line 75, sass/_mixins.sass */
+  .chapter-1-rethinking-retirement article .half_of_american_households p .major:after, .chapter-1-rethinking-retirement article .half_of_american_households p .major-alt:after, .chapter-1-rethinking-retirement article .half_of_american_households p .one_in_four_workers .contents div p.first:after, .chapter-1-rethinking-retirement article .one_in_four_workers .contents div .half_of_american_households p p.first:after, .chapter-1-rethinking-retirement article .half_of_american_households p p:after {
+    content: "";
+    display: block;
+    margin: 0.75em auto 0;
+    width: 50px;
+    border-bottom: 2px solid #383838; }
+/* line 174, sass/_chapter1.sass */
 .chapter-1-rethinking-retirement article .working_about_the_right_amount .contents {
   background-image: url('../img/1/quoter.jpg?1369452684'); }
-/* line 180, sass/_chapter1.sass */
+/* line 183, sass/_chapter1.sass */
 .chapter-1-rethinking-retirement article .outro .second {
   font-family: "Adobe Caslon W01 Bd";
   font-size: 20.8px; }
