--- a/css/sass/style.sass
+++ b/css/sass/style.sass
@@ -19,15 +19,8 @@ $caslon-bold: 'Adobe Caslon W01 Bd'
 $caslon-italic: 'Adobe Caslon W01 It'
 $caslon-bold-italic: 'Adobe Caslon W01 Bd It'
 
-// $caslon: serif
-// $caslon-bold: serif
-// $caslon-italic: serif
-// $caslon-bold-italic: serif
-
 $proxima-bold: 'Proxima N W01 Bold'
 $proxima-semibold: 'Proxima N W01 Smbd'
-
-
 
 $font-chapter: $bodoni, 'Times New Roman', Times, serif
 $font-heading: $proxima-bold, 'Century Gothic', Helvetica, Arial, sans-serif
@@ -40,6 +33,8 @@ $font-size-small: 12px
 $line: $font-size * 1.5
 $gutter: 10px
 
+// Color
+
 $dark: #383838
 $medium: #666
 $light: #aaa
@@ -48,10 +43,15 @@ $green: #548e85
 $link-color: $green
 $link-color-hover: $dark
 
+// Imports
+
 @import 'mixins'
 @import 'base'
 
 @import 'header'
 @import 'footer'
 @import 'chapter1'
+@import 'chapter2'
+@import 'chapter3'
 @import 'chapter4'
+@import 'chapter5'
