--- a/css/sass/_chapter1.sass
+++ b/css/sass/_chapter1.sass
@@ -1,4 +1,5 @@
 .chapter-1-rethinking-retirement article
+
   header.story_header
     @extend .on_dark_background
     z-index: 2
@@ -37,7 +38,6 @@
 
     .background-image
       background-image: image-url('1/path.jpg')
-      // background-position: center
 
   .percentage_of_workers
     p
@@ -49,10 +49,12 @@
     @include transform(rotate(-180deg))
     @include transition(transform 2s)
 
-  .percent_50, .percent_92
+  .percent_50,
+  .percent_92
     width: 100px
     height: 100px
     margin: 0 auto
+    
     // leave image for polyfilling if necessary
     img
       display: none
@@ -63,7 +65,6 @@
 
     .percent_50 .pie_slice
       @include transform(rotate(0deg))
-
 
   .expectation_chart
     background: image-url('1/expectation_chart.svg') left top no-repeat
