--- a/css/sass/_header.sass
+++ b/css/sass/_header.sass
@@ -88,12 +88,12 @@ header.site_header
     li
       margin: 0 0.6em
       padding-bottom: 5px
-      @include transition(all, .2s)
+      @include transition(all .2s)
 
       a
         color: $light
         padding: 0 0.3em
-        @include transition(all, .2s)
+        @include transition(all .2s)
 
       &:hover,
       &.current_chapter
